# oss-maintainer-bot

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  RELEASE  SECURITY.md  action.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: README.md
src/: github_utils.py  main.py  router.py
src/features/: __init__.py  duplicate_detector.py  label_issues.py  release_notes.py  stale_responder.py  summarize_prs.py
src/llm/: client.py  prompts.py
tests/: conftest.py  test_label_issues.py  test_stale_responder.py  test_summarize_prs.py
tests/fixtures/: sample_issue.json  sample_pr.json
