[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "oss-maintainer-bot"
version = "0.1.0"
description = "AI-powered GitHub Action that automates OSS maintenance tasks using OpenAI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "seedawn2013", email = "seedawn2013@users.noreply.github.com" }
]
keywords = ["github-actions", "openai", "automation", "open-source", "maintenance", "llm", "codex"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "openai>=1.30.0",
  "PyGithub>=2.3.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.3.0",
  "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/seedawn2013/oss-maintainer-bot"
Repository = "https://github.com/seedawn2013/oss-maintainer-bot"
Issues = "https://github.com/seedawn2013/oss-maintainer-bot/issues"
Changelog = "https://github.com/seedawn2013/oss-maintainer-bot/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
